# full-stack-rustapi-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
migrations/: 001_initial.sql
src/: db.rs  extractors.rs  main.rs  middleware.rs  test_utils.rs
src/handlers/: auth.rs  home.rs  items.rs  mod.rs
src/models/: item.rs  mod.rs  user.rs
static/css/: style.css
templates/: base.html  index.html
templates/auth/: login.html  register.html
templates/items/: form.html  list.html
