[package]
name = "basic-crud-ops"
version = "0.1.0"
edition = "2021"
description = "A full-stack CRUD application with Basic Auth using RustAPI"
authors = ["tuntii"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuntii/basic-crud-ops"
homepage = "https://github.com/tuntii/basic-crud-ops"

[dependencies]
# RustAPI Web Framework
rustapi-rs = { version = "0.1", features = ["full"] }
rustapi-macros = "0.1"
rustapi-extras = { version = "0.1", features = ["jwt"] }
rustapi-core = "0.1"
rustapi-openapi = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Templating
tera = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
cookie = "0.18"

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"


# Validation
rustapi-validate = "0.1"
async-trait = "0.1"
